--- a/src/components/Dashboard/styles.module.css
+++ b/src/components/Dashboard/styles.module.css
@@ -26,6 +26,25 @@
   color: black;
 }
 
+.artwork-row {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #e3e9e8;
+  padding: 0.3rem 0.5rem;
+  height: 4rem;
+  font-size: 1.1rem;
+  background-color: white;
+  text-Decoration: none;
+  color: black;
+}
+.artwork-row:focus{
+  background-color: #f6fafb;
+  background-image: linear-gradient(108deg, rgb(235, 244, 244) 50%, rgb(251, 253, 253) 45%, rgb(255, 255, 255) 85%, rgb(255, 255, 255) 100%);
+  cursor: default;
+}
+
+
 .active-artist-row {
   background-color: #f6fafb;
   background-image: linear-gradient(108deg, rgb(235, 244, 244) 50%, rgb(251, 253, 253) 45%, rgb(255, 255, 255) 85%, rgb(255, 255, 255) 100%);
